@@ -1,3 +1,7 @@
+2005-04-24  Sam Steingold  <sds@gnu.org>
+
+	* init.lisp (search-file): use MAKE-PRELIMINARY to avoid a warning
+
 2005-04-22  Sam Steingold  <sds@gnu.org>
 
 	prevent accidental EXT:! redefinition by users
